# 008-review-control-plane

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pyre_configuration  AGENTS.md  CHANGELOG.md  DELIVERY_REPORT.md  Dockerfile.api  LICENSE  Makefile  README.md  business-logic-flow.json  docker-compose-patched.yml  docker-compose.yml  feishu_doc_structure.md  flow.json  flow2.json  flow3.json  frontend-interaction-v2.mmd  frontend-interaction-zh.mmd  frontend-interaction.mmd  generate-business-logic-flow.js  generate-landscape-diagram.js  generate-upload-flow.js  landscape-diagram.json  patch_changelog.py  pyproject.toml  pyrightconfig.json  review-structure-dsl.json  review-structure.mmd  skills-lock.json  test.json  update_gov_routes.py  update_gov_service.py  upload-flow.json  verify_hashes.py
apps/api/: hermes_server_shim.py  pyproject.toml  test_playwright.py
apps/api/e2e_artifacts/: 008-fact-packet.json  fail_008-fact-packet.json  fail_final-report-packet.json  fail_hermes-review-packet.json  fail_review-brief.json  final-report-packet.json  hermes-review-packet.json  review-brief.json
apps/api/scripts/: run_hermes_p1_e2e.py  run_local_hermes_minimal_review.py  run_local_hermes_smoke.py  validate_module_contributions.py
apps/api/src/: main.py  main_dependencies.py
apps/api/tests/: test_admin_governance.py  test_assembler_module_gate.py  test_boundary_hard_enforcement.py  test_config.py  test_dual_review.py  test_final_report_merger.py  test_final_report_view_model.py  test_formal_result_ownership.py  test_governance_comprehensive.py  test_hermes_boundary_enforcement.py  test_hermes_controller.py  test_hermes_fail_closed_boundary.py  test_hermes_local_kernel_minimal_execution.py  test_hermes_local_kernel_smoke.py  test_hermes_module_bindings.py  test_hermes_normative_validity_agent.py  test_hermes_presentation_agent.py  test_review_evaluation.py  test_review_task_contract_routes.py  test_runtime.py  test_simulation_boundary.py  test_structured_review.py  test_structured_review_capability_facade.py  test_support_packet_builder_registry.py  test_system_routes.py  (+2 more)
archive/: README.md
(+592 files in other folders)
