[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-control-plane-api"
version = "0.1.0"
description = "FastAPI backend for 008 review control plane"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=23.2.1",
  "aiohttp>=3.12.0",
  "arxiv>=2.0.0",
  "beautifulsoup4>=4.12.2",
  "colorama>=0.4.6",
  "duckduckgo-search>=8.1.1",
  "fastapi>=0.115.0",
  "htmldocx>=0.0.6",
  "httpx>=0.27.0",
  "json-repair>=0.29.8",
  "json5>=0.9.25",
  "langchain>=1.0.0",
  "langchain-community>=0.4.0",
  "langchain-core>=1.0.0",
  "langchain-mcp-adapters>=0.1.0",
  "langchain-openai>=1.0.0",
  "langchain-text-splitters>=1.0.0",
  "langgraph>=1.0.0",
  "loguru>=0.7.2",
  "markdown>=3.5.1",
  "mcp>=1.9.1",
  "md2pdf>=3.1.1",
  "openai>=1.3.3",
  "docx2txt>=0.8",
  "pdfplumber>=0.11.0",
  "PyMuPDF>=1.23.6",
  "python-docx>=1.1.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "requests>=2.31.0",
  "sqlalchemy>=2.0.28",
  "tenacity>=9.1.2",
  "tiktoken>=0.7.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
